# katsdpsigproc

./: .flake8  .gitignore  .pre-commit-config.yaml  .pydocstyle  .readthedocs.yml  .travis.yml  Jenkinsfile  LICENSE  README.md  doc-requirements.txt  jenkins-build-doc.sh  jenkins-build.sh  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  rfiflagtest.py  rtd-requirements.txt  setup.cfg  setup.py  test-requirements.txt  update-asyncio.sh
doc/: Makefile  accel.rst  builtin-ops.rst  changelog.rst  conf.py  index.rst  installation.rst  katsdpsigproc.asyncio.rst  katsdpsigproc.rfi.rst  katsdpsigproc.rfi.test.rst  katsdpsigproc.rst  katsdpsigproc.test.rst  macros.rst  make.bat  user.rst
doc/accel/: advanced.rst  autotune.rst  buffers.rst  intro.rst  kernels.rst  operations.rst  testing.rst
doc/examples/: triple_op_template.py  triple_templ.py
doc/user/: advanced.rst  autotune.rst  buffers.rst  builtin-ops.rst  index.rst  init.rst  installation.rst  intro.rst  kernels.rst  macros.rst  operations.rst  resource.rst  sync.rst  testing.rst  threads.rst  undocumented.rst
doc/user/examples/: fill_reduce.dot  fill_reduce.py  hello_accel.py  set_ones.py  sum.mako  sum.py  test_triple.py  triple.py  triple_op.py  triple_op_template.py  triple_templ.py  triple_tune.py
katsdpsigproc/: __init__.py  abc.py  accel.py  copy.mako  copy.py  cuda.py  fft.py  fill.mako  fill.py  hreduce.mako  maskedsum.mako  maskedsum.py  maskedsumabs.mako  maskedsumabs.py  opencl.py  percentile.mako  percentile.py  port.mako  rank.cu  rank.mako  reduce.py  resource.py  test_accel.py  transpose.cu  transpose.mako  transpose.py  transpose_base.mako  tune.py  wg_reduce.cu  wg_reduce.mako  zscale.py
katsdpsigproc/accel/: array.py
katsdpsigproc/asyncio/: resource.py
katsdpsigproc/rfi/: __init__.py  background.py  background_median_filter.cu  background_median_filter.mako  device.py  flagger.py  host.py  madnz.mako  madnz_t.mako  test_background.py  test_threshold.py  threshold.py  threshold_mad.cu  threshold_mad.mako  threshold_mad_common.cu  threshold_mad_common.mako  threshold_mad_t.cu  threshold_mad_t.mako  threshold_simple.mako  threshold_simple_t.mako  threshold_sum.mako  twodflag.py
katsdpsigproc/rfi/test/: __init__.py  test_background.py  test_flagger.py  test_median_non_zero.mako  test_noise_est.py  test_threshold.py  test_twodflag.py
katsdpsigproc/test/: __init__.py  test_accel.py  test_copy.py  test_fft.py  test_fill.py  test_maskedsum.py  test_maskedsumabs.py  test_percentile.py  test_rank.mako  test_rank.py  test_reduce.mako  test_reduce.py  test_resource.py  test_transpose.py  test_tune.py  test_zscale.py
katsdpsigproc/test/asyncio/: test_resource.py
scripts/: maskedsumabstest.py  maskedsumtest.py  percentiletest.py  rfiflagtest.py  transposetest.py
src/katsdpsigproc/: __init__.py  abc.py  accel.py  cuda.py  fft.py  fill.mako  fill.py  hreduce.mako  maskedsum.mako  maskedsum.py  opencl.py  percentile.mako  percentile.py  port.mako  pytest_plugin.py  rank.mako  reduce.py  resource.py  transpose.mako  transpose.py  transpose_base.mako  tune.py  wg_reduce.mako
src/katsdpsigproc/asyncio/: __init__.py  resource.py
test/: __init__.py  conftest.py  test_accel.py  test_fft.py  test_fill.py  test_maskedsum.py  test_percentile.py  test_rank.mako  test_rank.py  test_reduce.mako  test_reduce.py  test_resource.py  test_transpose.py  test_tune.py
test/rfi/: __init__.py  test_background.py  test_flagger.py  test_median_non_zero.mako  test_noise_est.py  test_threshold.py  test_twodflag.py
(+16 files in other folders)
