[metadata]
name = katsdpsigproc
description = Karoo Array Telescope accelerated signal processing tools
long_description = file: README.md
long_description_content_type = text/markdown
license = Modified BSD
author = MeerKAT SDP team
author_email = sdpdev+katsdpsigproc@sarao.ac.za
url = https://katsdpsigproc.readthedocs.io/
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find:
install_requires =
    appdirs
    decorator
    mako
    numba >= 0.36.1   # Older versions have bugs in median functions
    numpy >= 1.10
    pandas
    scipy
    typing_extensions
python_requires = >=3.6
zip_safe = False   # Kernels need to be readable

[options.packages.find]
where = src

[options.extras_require]
CUDA =
    pycuda >= 2015.1.3

OpenCL =
    pyopencl >= 2017.2.1

doc =
    sphinx >= 1.3
    sphinxcontrib-tikz
    sphinx-rtd-theme

test =
    asynctest
    graphviz
    nose
