################################################################################
# Copyright (c) 2022, National Research Foundation (SARAO)
#
# Licensed under the BSD 3-Clause License (the "License"); you may not use
# this file except in compliance with the License. You may obtain a copy
# of the License at
#
#   https://opensource.org/licenses/BSD-3-Clause
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
################################################################################

[metadata]
name = katsdpsigproc
description = Karoo Array Telescope accelerated signal processing tools
long_description = file: README.md
long_description_content_type = text/markdown
license = Modified BSD
author = MeerKAT SDP team
author_email = sdpdev+katsdpsigproc@sarao.ac.za
url = https://katsdpsigproc.readthedocs.io/
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find:
install_requires =
    appdirs
    decorator
    mako
    numba >= 0.36.1   # Older versions have bugs in median functions
    numpy >= 1.10
    pandas
    scipy
    typing_extensions
python_requires = >=3.6
zip_safe = False   # Kernels need to be readable

[options.packages.find]
where = src

[options.extras_require]
CUDA =
    pycuda >= 2015.1.3

OpenCL =
    pyopencl >= 2017.2.1

doc =
    sphinx >= 1.3
    sphinxcontrib-tikz
    sphinx-rtd-theme

test =
    graphviz
    pytest
    pytest-asyncio

[options.package_data]
* = *.mako, py.typed
